@@ -6,6 +6,7 @@ import com.lorevault.api.dto.JobStatusResponse;
 import com.lorevault.api.event.ChapterIngestionEvent;
 import com.lorevault.api.model.*;
 import com.lorevault.api.repository.ChapterRepository;
+import com.lorevault.api.repository.ChunkRepository;
 import com.lorevault.api.repository.IngestionJobRepository;
 import com.lorevault.api.repository.StatusRecordRepository;
 import lombok.RequiredArgsConstructor;
@@ -15,6 +16,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -34,6 +36,9 @@ public class IngestionService {
     private final StatusRecordRepository statusRecordRepository;
     private final HashService hashService;
     private final ChunkService chunkService;
+    private final SceneDetectionService sceneDetectionService;
+    private final TextChunkingService textChunkingService;
+    private final ChunkRepository chunkRepository;
     private final ApplicationEventPublisher eventPublisher;
 
     /**
@@ -105,7 +110,7 @@ public class IngestionService {
         List<StatusRecord> recentRecords = statusRecordRepository.findRecentByJobId(jobId)
                 .stream()
                 .limit(5)
-                .collect(Collectors.toList());
+                .toList();
 
         List<JobStatusResponse.StatusUpdateDto> recentUpdates = recentRecords.stream()
                 .map(record -> new JobStatusResponse.StatusUpdateDto(
@@ -171,44 +176,62 @@ public class IngestionService {
     }
 
     /**
-     * Process a chapter by creating chunks and tracking progress
-     * v0.2.0: Implements content storage & segmentation
+     * Process a chapter by detecting scenes and creating chunks following 
+     * the v0.3.0 text-chunking specification.
+     * Implements the four-stage workflow: Scene Identification → Coordinate Localization → 
+     * Chunking Decision Gate → Chunk Generation
      */
     @Transactional
     public void processChapter(IngestionJob job, Chapter chapter) {
         try {
-            log.info("Starting chapter processing for job {} and chapter {}", job.getId(), chapter.getId());
+            log.info("Starting v0.3.0 chapter processing for job {} and chapter {}", job.getId(), chapter.getId());
             
             // Update job status to preprocessing
             updateJobStatus(job, IngestionStatus.PREPROCESSING_STARTED, 
                 IngestionStatus.PREPROCESSING_STARTED.getProgressPercentage(), 
-                "Starting content segmentation");
+                "Starting AI-powered scene detection");
             
-            // Check if chunks already exist
-            if (chunkService.chunksExistForChapter(chapter.getId())) {
-                log.info("Chunks already exist for chapter {}, skipping chunk creation", chapter.getId());
-                updateJobStatus(job, IngestionStatus.EMBEDDING_CHUNKS, 
-                    IngestionStatus.EMBEDDING_CHUNKS.getProgressPercentage(), 
-                    "Chunks already exist, validating");
-            } else {
-                // Create chunks using deterministic segmentation
+            // Check if scenes already exist for this chapter
+            if (!chapter.getScenes().isEmpty()) {
+                log.info("Scenes already exist for chapter {}, proceeding to chunking", chapter.getId());
                 updateJobStatus(job, IngestionStatus.DETECTING_SCENES, 
                     IngestionStatus.DETECTING_SCENES.getProgressPercentage(), 
-                    "Performing deterministic text segmentation");
+                    String.format("Found %d existing scenes, proceeding to chunking", chapter.getScenes().size()));
+            } else {
+                // Stage 1 & 2: AI Scene Detection + Coordinate Localization
+                updateJobStatus(job, IngestionStatus.DETECTING_SCENES, 
+                    IngestionStatus.DETECTING_SCENES.getProgressPercentage(), 
+                    "Analyzing chapter text with AI to identify semantic scene boundaries");
                 
-                List<Chunk> chunks = chunkService.createChunksForChapter(chapter);
+                List<Scene> detectedScenes = sceneDetectionService.detectScenesForChapter(chapter.getId());
                 
-                log.info("Created {} chunks for chapter {}", chunks.size(), chapter.getId());
-                updateJobStatus(job, IngestionStatus.EMBEDDING_CHUNKS, 
-                    IngestionStatus.EMBEDDING_CHUNKS.getProgressPercentage(),
-                    String.format("Created %d chunks from chapter content", chunks.size()));
+                log.info("Detected {} scenes for chapter {}", detectedScenes.size(), chapter.getId());
+                updateJobStatus(job, IngestionStatus.DETECTING_SCENES, 
+                    IngestionStatus.DETECTING_SCENES.getProgressPercentage() + 10,
+                    String.format("Detected %d semantic scenes from chapter text", detectedScenes.size()));
+                
+                // Reload chapter to get updated scenes
+                chapter = chapterRepository.findById(chapter.getId()).orElseThrow();
             }
+            
+            // Stage 3 & 4: Chunking Decision Gate + Chunk Generation
+            updateJobStatus(job, IngestionStatus.EMBEDDING_CHUNKS, 
+                IngestionStatus.EMBEDDING_CHUNKS.getProgressPercentage(), 
+                "Applying chunking decision gate to scenes");
+            
+            List<Chunk> chunks = createChunksFromScenes(chapter);
+            
+            log.info("Created {} chunks from {} scenes for chapter {}", 
+                     chunks.size(), chapter.getScenes().size(), chapter.getId());
+            updateJobStatus(job, IngestionStatus.EMBEDDING_CHUNKS, 
+                IngestionStatus.EMBEDDING_CHUNKS.getProgressPercentage() + 15,
+                String.format("Created %d chunks from %d semantic scenes", chunks.size(), chapter.getScenes().size()));
             
             // Complete the job
             completeJob(job, chapter);
             
         } catch (Exception e) {
-            log.error("Error processing chapter {} for job {}", chapter.getId(), job.getId(), e);
+            log.error("Error processing chapter {} for job {}: {}", chapter.getId(), job.getId(), e.getMessage(), e);
             failJob(job, "Chapter processing failed: " + e.getMessage());
         }
     }
@@ -278,5 +301,90 @@ public class IngestionService {
         );
 
         log.error("Job {} failed: {}", job.getId(), errorMessage);
+    }
+
+    /**
+     * Creates chunks from scenes following the text-chunking specification.
+     * Implements Stage 3 (Chunking Decision Gate) and Stage 4 (Chunk Generation):
+     * - Scene ≤ 5000 chars: Create single chunk
+     * - Scene > 5000 chars: Apply sentence-aware sliding window chunking
+     */
+    private List<Chunk> createChunksFromScenes(Chapter chapter) {
+        List<Chunk> allChunks = new ArrayList<>();
+        String chapterText = chapter.getRawText();
+        
+        log.debug("Processing {} scenes for chunking", chapter.getScenes().size());
+        
+        for (Scene scene : chapter.getScenes()) {
+            // Stage 3: Chunking Decision Gate
+            long sceneLength = scene.getEndCharacterOffset() - scene.getStartCharacterOffset();
+            
+            if (sceneLength <= 5000) {
+                // Stage 4.A: Single-Chunk Creation
+                log.debug("Scene {} has {} chars, creating single chunk", 
+                         scene.getSceneIndex(), sceneLength);
+                
+                Chunk singleChunk = createChunkFromScene(scene, chapter);
+                allChunks.add(singleChunk);
+                
+            } else {
+                // Stage 4.B: Multi-Chunk Subdivision using sliding window
+                log.debug("Scene {} has {} chars, applying sliding window chunking", 
+                         scene.getSceneIndex(), sceneLength);
+                
+                String sceneText = chapterText.substring(
+                    scene.getStartCharacterOffset().intValue(), 
+                    scene.getEndCharacterOffset().intValue()
+                );
+                
+                // Use TextChunkingService to create chunks from scene text
+                List<Chunk> sceneChunks = textChunkingService.extractChunks(sceneText);
+                
+                // Adjust chunk coordinates to be relative to chapter and set scene relationship
+                for (Chunk chunk : sceneChunks) {
+                    // Adjust coordinates to be relative to chapter, not scene
+                    chunk.setStartCharInChapter(chunk.getStartCharInChapter() + scene.getStartCharacterOffset().intValue());
+                    chunk.setEndCharInChapter(chunk.getEndCharInChapter() + scene.getStartCharacterOffset().intValue());
+
+                    // Set relationships
+                    chunk.setChapter(chapter);
+                    chunk.setScene(scene);
+
+                    // Generate content hash
+                    String chunkContent = chapterText.substring(
+                            chunk.getStartCharInChapter(),
+                            chunk.getEndCharInChapter()
+                    );
+                    chunk.setContentHash(hashService.generateSha256Hash(chunkContent));
+                }
+                
+                // Save the scene chunks
+                allChunks.addAll(chunkRepository.saveAll(sceneChunks));
+            }
+        }
+        
+        log.info("Created {} total chunks from {} scenes", allChunks.size(), chapter.getScenes().size());
+        return allChunks;
+    }
+
+    /**
+     * Creates a single chunk from a scene (Stage 4.A implementation)
+     */
+    private Chunk createChunkFromScene(Scene scene, Chapter chapter) {
+        Chunk chunk = new Chunk();
+        chunk.setChapter(chapter);
+        chunk.setScene(scene);
+        chunk.setChunkNumberInChapter(1); // Single chunk for this scene
+        chunk.setStartCharInChapter(scene.getStartCharacterOffset().intValue());
+        chunk.setEndCharInChapter(scene.getEndCharacterOffset().intValue());
+        
+        // Generate content hash
+        String sceneText = chapter.getRawText().substring(
+            scene.getStartCharacterOffset().intValue(), 
+            scene.getEndCharacterOffset().intValue()
+        );
+        chunk.setContentHash(hashService.generateSha256Hash(sceneText));
+        
+        return chunkRepository.save(chunk);
     }
 }
